--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: BLUE ELEPHANT :: 레트로 클래식 명품 안경</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/gridView.css">
     <script src="js/main.js" type="text/javascript"></script>
 </head>
 
 <body>
+    <!-- 헤더 -->
     <div id="header">
         <header>
             <h1 class="logo">
@@ -49,12 +49,14 @@
                 celebrities and artists so that we reinterpret eyewear from a modern viewpoint.</p>
         </div>
     </div>
-    <!--컨텐츠 영역-->
-    <div id="main_cont" class="wrap">
+    <!--선글라스 컨텐츠-->
+    <div id="sun_cont_wrap" class="wrap">
+        <!-- 타이틀 -->
         <h2 class="cont_tit">sunglasses</h2>
         <p class="cont_sub_tit">Experience the lightweight and stylish combination glasses<br>
             from the new collection.</p>
-        <section class="cont1">
+        <!-- 타이틀 -->
+        <section class="sun_cont1">
             <div class="cont_img">
                 <img src="images/original.jpg" alt="original" class="contimg">
                 <img src="images/category01.png" alt="category01" class="contimghover">
@@ -66,12 +68,12 @@
                     vintagedesigns from a modern viewpoint.</p>
             </div>
         </section>
-        <section class="cont2">
+        <section class="sun_cont2">
             <div class="cont_txt">
                 <h3>signature</h3>
                 <p>Made of titanium, mazzucchelli with more exquisite details,<br>
-Based on styles from the BLUE ELEPHANT archives<br>
-celebrating timeless design born in decades past.</p>
+                    Based on styles from the BLUE ELEPHANT archives<br>
+                    celebrating timeless design born in decades past.</p>
             </div>
             <div class="cont_img">
                 <img src="images/signature.jpg" alt="original" class="contimg">
@@ -79,26 +81,64 @@ celebrating timeless design born in decades past.</p>
             </div>
         </section>
     </div>
-
-
+    <!--중간 이벤트 배너-->
+    <div id=ban>
+        <MARQUEE loop="infinite">
+            2020 F/W ORIGINAL COLLECTION
+        </MARQUEE>
+        <a class="ban_btn">
+            WATCH NOW
+        </a>
+    </div>
+    <!--안경 콘텐츠-->
+    <div id="gls_cont_wrap">
+        <!-- 타이틀 -->
+        <h2 class="cont_tit">glasses</h2>
+        <p class="cont_sub_tit">Discover your next frame that defines you.</p>
+        <!-- 타이틀 -->
+        <section class="gls_cont1">
+            <div class="gls_on">
+                <img src="images/06.jpg" alt="착용사진">
+                <h4></h4>
+                <p></p>
+            </div>
+            <ul class="gls_list">
+                <li>
+                    <a>
+                        <img src="images/g01.jpg" alt="제품1">
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g02.jpg" alt="제품2">
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g03.jpg" alt="제품3">
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g04.jpg" alt="제품4">
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g05.jpg" alt="제품5">
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g06.jpg" alt="제품6">
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </div>
     <!--푸터-->
     <footer></footer>
 
-
-    <ul class="gdrid">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
 </body>
 
 </html>
