--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--메인비주얼-->
     <div id="main_page">
         <div class="main_bg"></div>
-        <video id="myVideo" src="video/main.mp4" muted autoplay></video>
+        <video id="myVideo" src="video/main.mp4" muted autoplay loop></video>
         <div class="main_text">
             <h2>Be creative or die</h2>
             <p>'BLUE ELEPHANT' symbolizes creativity of imagineers, and its motives are 1970's<br>
