--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <p class="cont_sub_tit">Experience the lightweight and stylish combination glasses<br>from the new collection.</p>
         </div>
         <section class="sun_cont1">
-            <div class="cont_img">
+            <a href="#" class="cont_img">
                 <img src="images/original.jpg" alt="original" class="contimg">
                 <img src="images/category01.png" alt="category01" class="contimghover">
-            </div>
+            </a>
             <div class="cont_txt">
-                <h3>original</h3>
+                <h3><a href="#">original</a></h3>
                 <p>Based on trendy, Influential, innovative and contemporary
                     styles, <br>reinterpreting the 1970's American classics and
                     vintagedesigns from a modern viewpoint.</p>
@@ -69,20 +69,20 @@
         </section>
         <section class="sun_cont2">
             <div class="cont_txt">
-                <h3>signature</h3>
+                <h3><a href="#">signature</a></h3>
                 <p>Made of titanium, mazzucchelli with more exquisite details,<br>
                     Based on styles from the BLUE ELEPHANT archives<br>
                     celebrating timeless design born in decades past.</p>
             </div>
-            <div class="cont_img">
+            <a class="cont_img">
                 <img src="images/signature.jpg" alt="original" class="contimg">
-                <img src="images/category02.png" alt="category01" class="contimghover">
-            </div>
+                <img src="images/category03.png" alt="category03" class="contimghover">
+            </a>
         </section>
     </div>
     <!--중간 이벤트 배너-->
     <div id=ban>
-        <MARQUEE loop="infinite" scrollamount="10">
+        <MARQUEE loop="infinite" scrollamount="15">
             2020 F/W ORIGINAL COLLECTION
         </MARQUEE>
         <a class="ban_btn">
@@ -95,49 +95,36 @@
             <h2 class="cont_tit">glasses</h2>
             <p class="cont_sub_tit">Discover your next frame that defines you.</p>
         </div>
-        <section class="gls_cont1">
-            <div class="gls_on">
-                <img src="images/06.jpg" alt="착용사진">
-                <h4></h4>
-                <p></p>
-            </div>
-            <div class="gls_list_wrap">
-                <ul class="gls_list">
-                    <li>
-                        <a>
-                            <img src="images/g01.jpg" alt="제품1">
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <img src="images/g02.jpg" alt="제품2">
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <img src="images/g03.jpg" alt="제품3">
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <img src="images/g04.jpg" alt="제품4">
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <img src="images/g05.jpg" alt="제품5">
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <img src="images/g06.jpg" alt="제품6">
-                        </a>
-                    </li>
-                </ul>
-                <div id="scrollBar">
-                    <div id="bar"></div>
-                </div>
-            </div>
+        <section class="gls_cont wrap">
+            <ul class="gls_list">
+                <li>
+                    <a>
+                        <img src="images/g01.jpg" alt="제품1">
+                        <span class="ir">제품착용1</span>
+                        <h5>vernon gold</h5>
+                        <h6>31,500</h6>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g02.jpg" alt="제품2">
+                        <span class="ir">제품착용2</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g03.jpg" alt="제품3">
+                        <span class="ir">제품착용3</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/g04.jpg" alt="제품4">
+                        <span class="ir">제품착용4</span>
+                    </a>
+                </li>
+            </ul>
+            <div>more +</div>
         </section>
     </div>
     <!-- 오프라인 매장 -->
@@ -151,9 +138,23 @@
         <a href="#" class="shop_btn">SEARCH</a>
         <div class="shop_img"></div>
     </div>
-
     <!--푸터-->
-    <footer></footer>
+    <div id="footer">
+        <footer class="wrap">
+            <div class="footer_left">
+                법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span></span>
+                <p>© 2020 블루엘리펀트. All rights reserved.</p>
+            </div>
+            <div class="footer_right">
+                <p>BANK ACCOUNT</p>
+                신한은행110-455-798545<span></span>
+                예금주박예술(블루엘리펀트)
+                <p>DELIVERY INFO</p>
+                CJ 대한통운<span></span>
+                서울시 용산구 이태원로 16길 21, 1층 BLUE ELEPHANT
+            </div>
+        </footer>
+    </div>
 
 </body>
 
