--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- 헤더 -->
     <div id="header">
-        <header>
+        <header class="wrap">
             <h1 class="logo">
                 <a href="/">
                     <img src="images/logo_white.png" alt="로고">
@@ -32,6 +32,11 @@
                 <li>
                     <a href="#">
                         <img src="images/search_icon_white.png" alt="검색">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/menu_icon_white.png" alt="메뉴">
                     </a>
                 </li>
             </ul>
@@ -81,7 +86,7 @@
         </section>
     </div>
     <!--중간 이벤트 배너-->
-    <div id=ban>
+    <div id="ban">
         <MARQUEE loop="infinite" scrollamount="15">
             2020 F/W ORIGINAL COLLECTION
         </MARQUEE>
@@ -98,33 +103,41 @@
         <section class="gls_cont wrap">
             <ul class="gls_list">
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g01.jpg" alt="제품1">
                         <span class="ir">제품착용1</span>
-                        <h5>vernon gold</h5>
-                        <h6>31,500</h6>
+                        <h5>VERNON gold</h5>
+                        <h6>21,500</h6>
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g02.jpg" alt="제품2">
                         <span class="ir">제품착용2</span>
+                        <h5>ARNOLD crystal</h5>
+                        <h6>38,200</h6>
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g03.jpg" alt="제품3">
                         <span class="ir">제품착용3</span>
+                        <h5>STEVEN antiquegold</h5>
+                        <h6>91,500</h6>
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g04.jpg" alt="제품4">
                         <span class="ir">제품착용4</span>
+                        <h5>BUSH silver-sage</h5>
+                        <h6>51,000</h6>
                     </a>
                 </li>
             </ul>
-            <div>more +</div>
+            <div class="more_btn">
+                <a href="#">more <span>+</span></a>
+            </div>
         </section>
     </div>
     <!-- 오프라인 매장 -->
@@ -135,7 +148,7 @@
                 21, ITAEWON-ro 16-gil, Yongsan-gu,
                 Seoul, Republic of Korea</p>
         </div>
-        <a href="#" class="shop_btn">SEARCH</a>
+        <a href="#" class="shop_btn">CONTACT</a>
         <div class="shop_img"></div>
     </div>
     <!--푸터-->
@@ -155,7 +168,33 @@
             </div>
         </footer>
     </div>
-
+    <!--햄버거메뉴-->
+    <div id="menu_wrap">
+        <nav class="menu">
+            <ul class="nav_list">
+                <li>
+                    <a href="#">
+                        STORIES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        SUNGLASSES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        GLASSES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        EVENT
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
 
 </html>
