--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: BLUE ELEPHANT :: 레트로 클래식 명품 안경</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </head>
 
 <body>
     <!-- 헤더 -->
     <div id="header">
-        <header>
+        <header class="wrap">
             <h1 class="logo">
                 <a href="/">
                     <img src="images/logo_white.png" alt="로고">
@@ -34,6 +36,11 @@
                         <img src="images/search_icon_white.png" alt="검색">
                     </a>
                 </li>
+                <li>
+                    <a href="#">
+                        <img src="images/menu_icon_white.png" alt="메뉴">
+                    </a>
+                </li>
             </ul>
         </header>
     </div>
@@ -51,11 +58,11 @@
     </div>
     <!--선글라스 컨텐츠-->
     <div id="sun_cont_wrap" class="wrap">
-        <div class="title_wrap">
+        <div class="title_wrap itpos">
             <h2 class="cont_tit">sunglasses</h2>
             <p class="cont_sub_tit">Experience the lightweight and stylish combination glasses<br>from the new collection.</p>
         </div>
-        <section class="sun_cont1">
+        <section class="sun_cont1 itpos">
             <a href="#" class="cont_img">
                 <img src="images/original.jpg" alt="original" class="contimg">
                 <img src="images/category01.png" alt="category01" class="contimghover">
@@ -67,7 +74,7 @@
                     vintagedesigns from a modern viewpoint.</p>
             </div>
         </section>
-        <section class="sun_cont2">
+        <section class="sun_cont2 itpos">
             <div class="cont_txt">
                 <h3><a href="#">signature</a></h3>
                 <p>Made of titanium, mazzucchelli with more exquisite details,<br>
@@ -81,10 +88,11 @@
         </section>
     </div>
     <!--중간 이벤트 배너-->
-    <div id=ban>
-        <MARQUEE loop="infinite" scrollamount="15">
-            2020 F/W ORIGINAL COLLECTION
-        </MARQUEE>
+    <div id="ban">
+        <div id="flowTxt">
+            <span>2020 F/W ORIGINAL COLLECTION</span>
+            <span>2020 F/W ORIGINAL COLLECTION</span>
+        </div>
         <a class="ban_btn">
             WATCH NOW
         </a>
@@ -98,33 +106,41 @@
         <section class="gls_cont wrap">
             <ul class="gls_list">
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g01.jpg" alt="제품1">
                         <span class="ir">제품착용1</span>
-                        <h5>vernon gold</h5>
-                        <h6>31,500</h6>
+                        <h5>VERNON gold</h5>
+                        <h6>21,500</h6>
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g02.jpg" alt="제품2">
                         <span class="ir">제품착용2</span>
+                        <h5>ARNOLD crystal</h5>
+                        <h6>38,200</h6>
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g03.jpg" alt="제품3">
                         <span class="ir">제품착용3</span>
+                        <h5>STEVEN antiquegold</h5>
+                        <h6>91,500</h6>
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="#">
                         <img src="images/g04.jpg" alt="제품4">
                         <span class="ir">제품착용4</span>
+                        <h5>BUSH silver-sage</h5>
+                        <h6>51,000</h6>
                     </a>
                 </li>
             </ul>
-            <div>more +</div>
+            <div class="more_btn">
+                <a href="#">more <span>+</span></a>
+            </div>
         </section>
     </div>
     <!-- 오프라인 매장 -->
@@ -135,7 +151,7 @@
                 21, ITAEWON-ro 16-gil, Yongsan-gu,
                 Seoul, Republic of Korea</p>
         </div>
-        <a href="#" class="shop_btn">SEARCH</a>
+        <a href="#" class="shop_btn">CONTACT</a>
         <div class="shop_img"></div>
     </div>
     <!--푸터-->
@@ -155,7 +171,33 @@
             </div>
         </footer>
     </div>
-
+    <!--햄버거메뉴-->
+    <div id="menu_wrap">
+        <nav class="menu">
+            <ul class="nav_list">
+                <li>
+                    <a href="#">
+                        STORIES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        SUNGLASSES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        GLASSES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        EVENT
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
 
 </html>
