--- a/index.html
+++ b/index.html
@@ -8,195 +8,229 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/jquery-touch-punch.min.js"></script>
+    <script src="js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
+    <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <!-- 헤더 -->
-    <div id="header">
-        <header class="wrap">
-            <h1 class="logo">
-                <a href="/">
-                    <img src="images/logo_white.png" alt="로고">
+    <div id="wrap">
+        <!-- 헤더 -->
+        <div id="header">
+            <header class="wrap">
+                <h1 class="logo">
+                    <a href="/">
+                        <img src="images/logo_white.png" alt="로고">
+                    </a>
+                </h1>
+                <ul class="gnb">
+                    <li>
+                        <a href="#">
+                            <img src="images/bag_icon_white.png" alt="장바구니">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/heart_icon_white.png" alt="관심상품">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/search_icon_white.png" alt="검색">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu_btn">
+                            <img src="images/menu_icon_white.png" alt="메뉴">
+                        </a>
+                    </li>
+                </ul>
+            </header>
+        </div>
+        <!--메인비주얼-->
+        <div id="main_page">
+            <div class="main_bg"></div>
+            <video id="myVideo" src="video/main.mp4" muted autoplay loop></video>
+            <div class="main_text">
+                <h2>Be creative or die</h2>
+                <p>'BLUE ELEPHANT' symbolizes creativity of imagineers, and its motives are 1970's<br>
+                    American classics and vintage designs. 'BLUE ELEPHANT' is a contemporary eyewear brand.<br>
+                    We get inspiration from many different fields collabolating with muse, icons,<br>
+                    celebrities and artists so that we reinterpret eyewear from a modern viewpoint.</p>
+            </div>
+        </div>
+        <!--선글라스 컨텐츠-->
+        <div id="sun_cont_wrap" class="wrap">
+            <div class="title_wrap itpos">
+                <h2 class="cont_tit">sunglasses</h2>
+                <p class="cont_sub_tit">Experience the lightweight and stylish combination glasses<br>from the new collection.</p>
+            </div>
+            <section class="sun_cont1 itpos">
+                <a href="#" class="cont_img">
+                    <img src="images/original.jpg" alt="original">
+                    <img src="images/category01.png" alt="category01" class="contimghover">
                 </a>
-            </h1>
-            <ul class="gnb">
-                <li>
-                    <a href="#">
-                        <img src="images/bag_icon_white.png" alt="장바구니">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/heart_icon_white.png" alt="관심상품">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/search_icon_white.png" alt="검색">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/menu_icon_white.png" alt="메뉴">
-                    </a>
-                </li>
-            </ul>
-        </header>
-    </div>
-    <!--메인비주얼-->
-    <div id="main_page">
-        <div class="main_bg"></div>
-        <video id="myVideo" src="video/main.mp4" muted autoplay loop></video>
-        <div class="main_text">
-            <h2>Be creative or die</h2>
-            <p>'BLUE ELEPHANT' symbolizes creativity of imagineers, and its motives are 1970's<br>
-                American classics and vintage designs. 'BLUE ELEPHANT' is a contemporary eyewear brand.<br>
-                We get inspiration from many different fields collabolating with muse, icons,<br>
-                celebrities and artists so that we reinterpret eyewear from a modern viewpoint.</p>
+                <div class="cont_txt">
+                    <h3><a href="#">original</a></h3>
+                    <p>Based on trendy, Influential, innovative and contemporary
+                        styles, <br>reinterpreting the 1970's American classics and
+                        vintagedesigns from a modern viewpoint.</p>
+                </div>
+            </section>
+            <section class="sun_cont2 itpos">
+                <div class="cont_txt">
+                    <h3><a href="#">signature</a></h3>
+                    <p>Made of titanium, mazzucchelli with more exquisite details,<br>
+                        Based on styles from the BLUE ELEPHANT archives<br>
+                        celebrating timeless design born in decades past.</p>
+                </div>
+                <a class="cont_img">
+                    <img src="images/signature.jpg" alt="original">
+                    <img src="images/category03.png" alt="category03" class="contimghover">
+                </a>
+            </section>
         </div>
-    </div>
-    <!--선글라스 컨텐츠-->
-    <div id="sun_cont_wrap" class="wrap">
-        <div class="title_wrap itpos">
-            <h2 class="cont_tit">sunglasses</h2>
-            <p class="cont_sub_tit">Experience the lightweight and stylish combination glasses<br>from the new collection.</p>
-        </div>
-        <section class="sun_cont1 itpos">
-            <a href="#" class="cont_img">
-                <img src="images/original.jpg" alt="original" class="contimg">
-                <img src="images/category01.png" alt="category01" class="contimghover">
+        <!--중간 이벤트 배너-->
+        <div id="ban">
+            <div id="flowTxt">
+                <span>2020 F/W ORIGINAL COLLECTION</span>
+                <span>2020 F/W ORIGINAL COLLECTION</span>
+            </div>
+            <a class="ban_btn">
+                WATCH NOW
             </a>
-            <div class="cont_txt">
-                <h3><a href="#">original</a></h3>
-                <p>Based on trendy, Influential, innovative and contemporary
-                    styles, <br>reinterpreting the 1970's American classics and
-                    vintagedesigns from a modern viewpoint.</p>
-            </div>
-        </section>
-        <section class="sun_cont2 itpos">
-            <div class="cont_txt">
-                <h3><a href="#">signature</a></h3>
-                <p>Made of titanium, mazzucchelli with more exquisite details,<br>
-                    Based on styles from the BLUE ELEPHANT archives<br>
-                    celebrating timeless design born in decades past.</p>
-            </div>
-            <a class="cont_img">
-                <img src="images/signature.jpg" alt="original" class="contimg">
-                <img src="images/category03.png" alt="category03" class="contimghover">
-            </a>
-        </section>
-    </div>
-    <!--중간 이벤트 배너-->
-    <div id="ban">
-        <div id="flowTxt">
-            <span>2020 F/W ORIGINAL COLLECTION</span>
-            <span>2020 F/W ORIGINAL COLLECTION</span>
         </div>
-        <a class="ban_btn">
-            WATCH NOW
-        </a>
-    </div>
-    <!--안경 콘텐츠-->
-    <div id="gls_cont_wrap">
-        <div class="title_wrap">
-            <h2 class="cont_tit">glasses</h2>
-            <p class="cont_sub_tit">Discover your next frame that defines you.</p>
+        <!--안경 콘텐츠-->
+        <div id="gls_cont_wrap">
+            <div class="title_wrap itpos">
+                <h2 class="cont_tit">glasses</h2>
+                <p class="cont_sub_tit">Discover your next frame that defines you.</p>
+            </div>
+            <section class="gls_cont wrap">
+                <ul class="gls_list">
+                    <li>
+                        <a href="#">
+                            <img src="images/g01.jpg" alt="제품1">
+                            <span class="ir">제품착용1</span>
+                            <h5>VERNON gold</h5>
+                            <h6>21,500</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g02.jpg" alt="제품2">
+                            <span class="ir">제품착용2</span>
+                            <h5>ARNOLD crystal</h5>
+                            <h6>38,200</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g03.jpg" alt="제품3">
+                            <span class="ir">제품착용3</span>
+                            <h5>STEVEN antiquegold</h5>
+                            <h6>91,500</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g04.jpg" alt="제품4">
+                            <span class="ir">제품착용4</span>
+                            <h5>BUSH silver-sage</h5>
+                            <h6>51,000</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g05.jpg" alt="제품5">
+                            <span class="ir">제품착용5</span>
+                            <h5>LIAM silver-line</h5>
+                            <h6>71,600</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g06.jpg" alt="제품6">
+                            <span class="ir">제품착용6</span>
+                            <h5>STYLES brown</h5>
+                            <h6>88,200</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g07.jpg" alt="제품7">
+                            <span class="ir">제품착용7</span>
+                            <h5>LACY black</h5>
+                            <h6>56,600</h6>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/g08.jpg" alt="제품8">
+                            <span class="ir">제품착용8</span>
+                            <h5>HOBBES silver</h5>
+                            <h6>66,000</h6>
+                        </a>
+                    </li>
+                </ul>
+            </section>
         </div>
-        <section class="gls_cont wrap">
-            <ul class="gls_list">
-                <li>
-                    <a href="#">
-                        <img src="images/g01.jpg" alt="제품1">
-                        <span class="ir">제품착용1</span>
-                        <h5>VERNON gold</h5>
-                        <h6>21,500</h6>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/g02.jpg" alt="제품2">
-                        <span class="ir">제품착용2</span>
-                        <h5>ARNOLD crystal</h5>
-                        <h6>38,200</h6>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/g03.jpg" alt="제품3">
-                        <span class="ir">제품착용3</span>
-                        <h5>STEVEN antiquegold</h5>
-                        <h6>91,500</h6>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/g04.jpg" alt="제품4">
-                        <span class="ir">제품착용4</span>
-                        <h5>BUSH silver-sage</h5>
-                        <h6>51,000</h6>
-                    </a>
-                </li>
-            </ul>
-            <div class="more_btn">
-                <a href="#">more <span>+</span></a>
+        <!-- 오프라인 매장 -->
+        <div id="shop_wrap">
+            <div class="title_wrap itpos">
+                <h2 class="cont_tit">shop</h2>
+                <p class="cont_sub_tit">Itaewon Flagship Store
+                    21, ITAEWON-ro 16-gil, Yongsan-gu,
+                    Seoul, Republic of Korea</p>
             </div>
-        </section>
-    </div>
-    <!-- 오프라인 매장 -->
-    <div id="shop_wrap">
-        <div class="title_wrap">
-            <h2 class="cont_tit">shop</h2>
-            <p class="cont_sub_tit">Itaewon Flagship Store
-                21, ITAEWON-ro 16-gil, Yongsan-gu,
-                Seoul, Republic of Korea</p>
+            <a href="#" class="shop_btn">CONTACT</a>
+            <div class="shop_img"></div>
         </div>
-        <a href="#" class="shop_btn">CONTACT</a>
-        <div class="shop_img"></div>
-    </div>
-    <!--푸터-->
-    <div id="footer">
-        <footer class="wrap">
-            <div class="footer_left">
-                법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span></span>
-                <p>© 2020 블루엘리펀트. All rights reserved.</p>
-            </div>
-            <div class="footer_right">
-                <p>BANK ACCOUNT</p>
-                신한은행110-455-798545<span></span>
-                예금주박예술(블루엘리펀트)
-                <p>DELIVERY INFO</p>
-                CJ 대한통운<span></span>
-                서울시 용산구 이태원로 16길 21, 1층 BLUE ELEPHANT
-            </div>
-        </footer>
-    </div>
-    <!--햄버거메뉴-->
-    <div id="menu_wrap">
-        <nav class="menu">
-            <ul class="nav_list">
-                <li>
-                    <a href="#">
-                        STORIES
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        SUNGLASSES
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        GLASSES
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        EVENT
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <!--푸터-->
+        <div id="footer">
+            <footer class="wrap">
+                <div class="footer_left">
+                    법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span></span>
+                    <p>© 2020 블루엘리펀트. All rights reserved.</p>
+                </div>
+                <div class="footer_right">
+                    <p>BANK ACCOUNT</p>
+                    신한은행110-455-798545<span></span>
+                    예금주박예술(블루엘리펀트)
+                    <p>DELIVERY INFO</p>
+                    CJ 대한통운<span></span>
+                    서울시 용산구 이태원로 16길 21, 1층 BLUE ELEPHANT
+                </div>
+            </footer>
+        </div>
+        <!--햄버거메뉴-->
+        <div id="menu_wrap">
+            <nav class="menu">
+                <ul class="nav_list">
+                    <li>
+                        <a href="#">
+                            STORIES
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            SUNGLASSES
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            GLASSES
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            EVENT
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </body>
 
