--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                 <ul class="gnb">
                     <li>
                         <a href="#">
-                            <img src="images/bag_icon_white.png" alt="장바구니">
+                            <img src="images/icon_bag_white.png" alt="장바구니">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/heart_icon_white.png" alt="관심상품">
+                            <img src="images/icon_heart_white.png" alt="관심상품">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/search_icon_white.png" alt="검색">
+                            <img src="images/icon_search_white.png" alt="검색">
                         </a>
                     </li>
                     <li>
                         <a href="#" class="menu_btn">
-                            <img src="images/menu_icon_white.png" alt="메뉴">
+                            <img src="images/icon_menu_white.png" alt="메뉴">
                         </a>
                     </li>
                 </ul>
@@ -68,7 +68,7 @@
             </div>
             <section class="sun_cont1 itpos">
                 <a href="#" class="cont_img">
-                    <img src="images/original.jpg" alt="original">
+                    <img src="images/bg_original.jpg" alt="original">
                     <img src="images/category01.png" alt="category01" class="contimghover">
                 </a>
                 <div class="cont_txt">
@@ -86,8 +86,8 @@
                         celebrating timeless design born in decades past.</p>
                 </div>
                 <a class="cont_img">
-                    <img src="images/signature.jpg" alt="original">
-                    <img src="images/category03.png" alt="category03" class="contimghover">
+                    <img src="images/bg_signature.jpg" alt="signature">
+                    <img src="images/category02.png" alt="category02" class="contimghover">
                 </a>
             </section>
         </div>
@@ -185,7 +185,11 @@
                     Seoul, Republic of Korea</p>
             </div>
             <a href="#" class="shop_btn">CONTACT</a>
-            <div class="shop_img"></div>
+            <ul class="shop_img">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
         <!--푸터-->
         <div id="footer">
@@ -210,7 +214,7 @@
                 <ul class="nav_list">
                     <li>
                         <a href="#">
-                            STORIES
+                            Gallery
                         </a>
                     </li>
                     <li>
