--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,13 @@
     <script type="text/javascript" src="js/jquery-touch-punch.min.js"></script>
     <script src="js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
     <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
+    <script src="js/gallery.js" type="text/javascript"></script>
 </head>
+
 <body>
     <div id="wrap" class="gallery">
-       <!--헤더-->
+        <!--헤더-->
         <div id="header">
             <header class="wrap">
                 <h1 class="logo">
@@ -47,8 +49,9 @@
                 </ul>
             </header>
         </div>
+        <!--컨텐츠-->
         <div id="text">Gallery</div>
-        
+        <ul id="photo"></ul>
         <!--햄버거메뉴-->
         <div id="menu_wrap">
             <nav class="menu">
