--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/jquery-touch-punch.min.js"></script>
     <script src="js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
     <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </head>
 
@@ -72,7 +73,7 @@
                     <img src="images/category01.png" alt="category01" class="contimghover">
                 </a>
                 <div class="cont_txt">
-                    <h3><a href="#">original</a></h3>
+                    <h3><a href="#">original <span>+</span></a></h3>
                     <p>Based on trendy, Influential, innovative and contemporary
                         styles, <br>reinterpreting the 1970's American classics and
                         vintagedesigns from a modern viewpoint.</p>
@@ -80,7 +81,7 @@
             </section>
             <section class="sun_cont2 itpos">
                 <div class="cont_txt">
-                    <h3><a href="#">signature</a></h3>
+                    <h3><a href="#">signature <span>+</span></a></h3>
                     <p>Made of titanium, mazzucchelli with more exquisite details,<br>
                         Based on styles from the BLUE ELEPHANT archives<br>
                         celebrating timeless design born in decades past.</p>
