--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery-touch-punch.min.js"></script>
-    <script src="js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
     <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
@@ -23,27 +22,32 @@
                 <h1 class="logo">
                     <a href="/">
                         <img src="images/logo_white.png" alt="로고">
+                        <img src="images/logo_black.png" alt="로고">
                     </a>
                 </h1>
                 <ul class="gnb">
                     <li>
                         <a href="#">
                             <img src="images/icon_bag_white.png" alt="장바구니">
+                            <img src="images/icon_bag_black.png" alt="장바구니">
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="images/icon_heart_white.png" alt="관심상품">
+                            <img src="images/icon_heart_black.png" alt="관심상품">
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <img src="images/icon_search_white.png" alt="검색">
+                            <img src="images/icon_search_black.png" alt="검색">
                         </a>
                     </li>
                     <li>
                         <a href="#" class="menu_btn">
                             <img src="images/icon_menu_white.png" alt="메뉴">
+                            <img src="images/icon_menu_black.png" alt="메뉴">
                         </a>
                     </li>
                 </ul>
