--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                         <a href="#">
                             <img src="images/g01.jpg" alt="제품1">
                             <span class="ir">제품착용1</span>
-                            <h5>VERNON gold</h5>
-                            <h6>21,500</h6>
+                            <h5>HENDRIX mandarincrystal</h5>
+                            <h6>81,500</h6>
                         </a>
                     </li>
                     <li>
