--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: BLUE ELEPHANT :: 레트로 클래식 명품 안경</title>
     <link href="css/gallery.css" rel="stylesheet" type="text/css">
-    <link href="css/lightbox.min.css" rel="stylesheet" >
+    <link href="css/lightbox.min.css" rel="stylesheet">
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.smoothwheel.js"></script>
@@ -57,6 +57,23 @@
         <!--컨텐츠-->
         <div id="text">Gallery</div>
         <ul id="photo"></ul>
+        <!--푸터-->
+        <div id="footer">
+            <footer class="wrap">
+                <div class="footer_left">
+                    법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 <span class="footer_500"></span>사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span class="footer_1920"></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span class="footer_1920"></span>
+                    <p>© 2020 블루엘리펀트. All rights reserved.</p>
+                </div>
+                <div class="footer_right">
+                    <p>BANK ACCOUNT</p>
+                    신한은행110-455-798545<span></span>
+                    예금주박예술(블루엘리펀트)
+                    <p>DELIVERY INFO</p>
+                    CJ 대한통운<span></span>
+                    서울시 용산구 이태원로 16길 21, 1층 BLUE ELEPHANT
+                </div>
+            </footer>
+        </div>
         <!--햄버거메뉴-->
         <div id="menu_wrap">
             <nav class="menu">
