--- a/list.html
+++ b/list.html
@@ -65,7 +65,7 @@
                     <a href="#">GLASSES</a>
                 </li>
             </ul>
-           <!--리스트 사진-->
+            <!--리스트 사진-->
             <ul class="gls_list">
                 <li>
                     <a href="#" class="htxt">
@@ -169,8 +169,8 @@
         <div id="footer">
             <footer class="wrap">
                 <div class="footer_left">
-                    법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span></span>
-                    <p>© 2020 블루엘리펀트. All rights reserved.</p>
+                    법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 <span class="footer_500"></span>사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span class="footer_1920"></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span class="footer_1920"></span>
+                        <p>© 2020 블루엘리펀트. All rights reserved.</p>
                 </div>
                 <div class="footer_right">
                     <p>BANK ACCOUNT</p>
