--- a/list.html
+++ b/list.html
@@ -164,6 +164,26 @@
                     </a>
                 </li>
             </ul>
+            <!--페이지 넘버-->
+            <div class="gls_num">
+                <ul class="gls_num_list">
+                    <li>
+                        <a href="#">
+                            &lt;
+                        </a>
+                    </li>
+                    <li class="on">
+                        <a href="#">
+                            1
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            &gt;
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!--푸터-->
         <div id="footer">
