--- a/show.html
+++ b/show.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="wrap">
+<!--    <div id="wrap">-->
         <!--헤더-->
         <div id="header" class="on">
             <header class="wrap">
@@ -199,7 +199,7 @@
                 </ul>
             </nav>
         </div>
-    </div>
+<!--    </div>-->
 </body>
 
 </html>
