--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: BLUE ELEPHANT :: 레트로 클래식 명품 안경</title>
+    <link href="css/swiper-bundle.min.css" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/jquery-touch-punch.min.js"></script>
+    <script src="js/swiper-bundle.min.js" type="text/javascript"></script>
     <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
@@ -112,9 +113,9 @@
                 <h2 class="cont_tit">glasses</h2>
                 <p class="cont_sub_tit">Discover your next frame that defines you.</p>
             </div>
-            <section class="gls_cont wrap">
-                <ul class="gls_list">
-                    <li>
+            <section class="gls_cont wrap swiper-container">
+                <ul class="gls_list swiper-wrapper">
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g01.jpg" alt="제품1">
                             <span class="ir">제품착용1</span>
@@ -122,7 +123,7 @@
                             <h6>81,500</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g02.jpg" alt="제품2">
                             <span class="ir">제품착용2</span>
@@ -130,7 +131,7 @@
                             <h6>38,200</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g03.jpg" alt="제품3">
                             <span class="ir">제품착용3</span>
@@ -138,7 +139,7 @@
                             <h6>91,500</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g04.jpg" alt="제품4">
                             <span class="ir">제품착용4</span>
@@ -146,7 +147,7 @@
                             <h6>51,000</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g05.jpg" alt="제품5">
                             <span class="ir">제품착용5</span>
@@ -154,7 +155,7 @@
                             <h6>71,600</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g06.jpg" alt="제품6">
                             <span class="ir">제품착용6</span>
@@ -162,7 +163,7 @@
                             <h6>88,200</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g07.jpg" alt="제품7">
                             <span class="ir">제품착용7</span>
@@ -170,7 +171,7 @@
                             <h6>56,600</h6>
                         </a>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <a href="#">
                             <img src="images/g08.jpg" alt="제품8">
                             <span class="ir">제품착용8</span>
@@ -219,7 +220,7 @@
                 <ul class="nav_list">
                     <li>
                         <a href="#">
-                            Gallery
+                            GALLERY
                         </a>
                     </li>
                     <li>
