--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 <p class="cont_sub_tit">Experience the lightweight and stylish combination glasses<br>from the new collection.</p>
             </div>
             <section class="sun_cont1 itpos">
-                <a href="#" class="cont_img">
+                <a href="list.html" class="cont_img">
                     <img src="images/bg_original.jpg" alt="original">
                     <img src="images/category01.png" alt="category01" class="contimghover">
                 </a>
                 <div class="cont_txt">
-                    <h3><a href="#">original <span>+</span></a></h3>
+                    <h3><a href="list.html">original <span>+</span></a></h3>
                     <p>Based on trendy, Influential, innovative and contemporary
                         styles, <br>reinterpreting the 1970's American classics and
                         vintagedesigns from a modern viewpoint.</p>
@@ -86,12 +86,12 @@
             </section>
             <section class="sun_cont2 itpos">
                 <div class="cont_txt">
-                    <h3><a href="#">signature <span>+</span></a></h3>
+                    <h3><a href="list.html">signature <span>+</span></a></h3>
                     <p>Made of titanium, mazzucchelli with more exquisite details,<br>
                         Based on styles from the BLUE ELEPHANT archives<br>
                         celebrating timeless design born in decades past.</p>
                 </div>
-                <a class="cont_img">
+                <a href="list.html" class="cont_img">
                     <img src="images/bg_signature.jpg" alt="signature">
                     <img src="images/category02.png" alt="category02" class="contimghover">
                 </a>
@@ -103,7 +103,7 @@
                 <span>2020 F/W ORIGINAL COLLECTION</span>
                 <span>2020 F/W ORIGINAL COLLECTION</span>
             </div>
-            <a class="ban_btn">
+            <a href="gallery.html" class="ban_btn">
                 WATCH NOW
             </a>
         </div>
@@ -116,7 +116,7 @@
             <section class="gls_cont wrap swiper-container">
                 <ul class="gls_list swiper-wrapper">
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g01.jpg" alt="제품1">
                             <span class="ir">제품착용1</span>
                             <h5>HENDRIX mandarincrystal</h5>
@@ -124,7 +124,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g02.jpg" alt="제품2">
                             <span class="ir">제품착용2</span>
                             <h5>ARNOLD crystal</h5>
@@ -132,7 +132,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g03.jpg" alt="제품3">
                             <span class="ir">제품착용3</span>
                             <h5>STEVEN antiquegold</h5>
@@ -140,7 +140,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g04.jpg" alt="제품4">
                             <span class="ir">제품착용4</span>
                             <h5>BUSH silver-sage</h5>
@@ -148,7 +148,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g05.jpg" alt="제품5">
                             <span class="ir">제품착용5</span>
                             <h5>LIAM silver-line</h5>
@@ -156,7 +156,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g06.jpg" alt="제품6">
                             <span class="ir">제품착용6</span>
                             <h5>STYLES brown</h5>
@@ -164,7 +164,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g07.jpg" alt="제품7">
                             <span class="ir">제품착용7</span>
                             <h5>LACY black</h5>
@@ -172,7 +172,7 @@
                         </a>
                     </li>
                     <li class="swiper-slide">
-                        <a href="#">
+                        <a href="show.html">
                             <img src="images/g08.jpg" alt="제품8">
                             <span class="ir">제품착용8</span>
                             <h5>HOBBES silver</h5>
@@ -219,17 +219,17 @@
             <nav class="menu">
                 <ul class="nav_list">
                     <li>
-                        <a href="#">
+                        <a href="gallery.html">
                             GALLERY
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="list.html">
                             SUNGLASSES
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="list.html">
                             GLASSES
                         </a>
                     </li>
