--- a/gallery.html
+++ b/gallery.html
@@ -79,17 +79,17 @@
             <nav class="menu">
                 <ul class="nav_list">
                     <li>
-                        <a href="#">
+                        <a href="gallery.html">
                             GALLERY
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="list.html">
                             SUNGLASSES
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="list.html">
                             GLASSES
                         </a>
                     </li>
