--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="cont_txt">
                     <h3><a href="list.html">original <span>+</span></a></h3>
                     <p>Based on trendy, Influential, innovative and contemporary
-                        styles, <br>reinterpreting the 1970's American classics and
+                        styles, <br>reinterpreting the 1970's American classics and<br>
                         vintagedesigns from a modern viewpoint.</p>
                 </div>
             </section>
@@ -180,6 +180,7 @@
                         </a>
                     </li>
                 </ul>
+                <div class="swiper-pagination"></div>
             </section>
         </div>
         <!-- 오프라인 매장 -->
