--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
         <div id="header" class="on">
             <header class="wrap">
                 <h1 class="logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="images/logo_white.png" alt="로고">
                         <img src="images/logo_black.png" alt="로고">
                     </a>
