--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="js/swiper-bundle.min.js" type="text/javascript"></script>
     <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
+    <script src="js/swiper-bundle.min.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </head>
@@ -85,23 +85,23 @@
                 </div>
             </section>
             <section class="sun_cont2 itpos">
+               <a href="list.html" class="cont_img">
+                    <img src="images/bg_signature.jpg" alt="signature">
+                    <img src="images/category02.png" alt="category02" class="contimghover">
+                </a>
                 <div class="cont_txt">
                     <h3><a href="list.html">signature <span>+</span></a></h3>
                     <p>Made of titanium, mazzucchelli with more exquisite details,<br>
                         Based on styles from the BLUE ELEPHANT archives<br>
                         celebrating timeless design born in decades past.</p>
                 </div>
-                <a href="list.html" class="cont_img">
-                    <img src="images/bg_signature.jpg" alt="signature">
-                    <img src="images/category02.png" alt="category02" class="contimghover">
-                </a>
             </section>
         </div>
         <!--중간 이벤트 배너-->
         <div id="ban">
             <div id="flowTxt">
-                <span>2020 F/W ORIGINAL COLLECTION</span>
-                <span>2020 F/W ORIGINAL COLLECTION</span>
+                <span class="flow">2020<span class="br"></span> F/W<span class="br"></span> ORIGINAL<span class="br"></span> COLLECTION</span>
+                <span class="flow">2020 F/W ORIGINAL COLLECTION</span>
             </div>
             <a href="gallery.html" class="ban_btn">
                 WATCH NOW
@@ -119,7 +119,7 @@
                         <a href="show.html">
                             <img src="images/g01.jpg" alt="제품1">
                             <span class="ir">제품착용1</span>
-                            <h5>HENDRIX mandarincrystal</h5>
+                            <h5><span>HENDRIX mandarincrystal</span></h5>
                             <h6>81,500</h6>
                         </a>
                     </li>
@@ -127,7 +127,7 @@
                         <a href="show.html">
                             <img src="images/g02.jpg" alt="제품2">
                             <span class="ir">제품착용2</span>
-                            <h5>ARNOLD crystal</h5>
+                            <h5><span>ARNOLD crystal</span></h5>
                             <h6>38,200</h6>
                         </a>
                     </li>
@@ -135,7 +135,7 @@
                         <a href="show.html">
                             <img src="images/g03.jpg" alt="제품3">
                             <span class="ir">제품착용3</span>
-                            <h5>STEVEN antiquegold</h5>
+                            <h5><span>STEVEN antiquegold</span></h5>
                             <h6>91,500</h6>
                         </a>
                     </li>
@@ -143,7 +143,7 @@
                         <a href="show.html">
                             <img src="images/g04.jpg" alt="제품4">
                             <span class="ir">제품착용4</span>
-                            <h5>BUSH silver-sage</h5>
+                            <h5><span>BUSH silver-sage</span></h5>
                             <h6>51,000</h6>
                         </a>
                     </li>
@@ -151,7 +151,7 @@
                         <a href="show.html">
                             <img src="images/g05.jpg" alt="제품5">
                             <span class="ir">제품착용5</span>
-                            <h5>LIAM silver-line</h5>
+                            <h5><span>LIAM silver-line</span></h5>
                             <h6>71,600</h6>
                         </a>
                     </li>
@@ -159,7 +159,7 @@
                         <a href="show.html">
                             <img src="images/g06.jpg" alt="제품6">
                             <span class="ir">제품착용6</span>
-                            <h5>STYLES brown</h5>
+                            <h5><span>STYLES brown</span></h5>
                             <h6>88,200</h6>
                         </a>
                     </li>
@@ -167,7 +167,7 @@
                         <a href="show.html">
                             <img src="images/g07.jpg" alt="제품7">
                             <span class="ir">제품착용7</span>
-                            <h5>LACY black</h5>
+                            <h5><span>LACY black</span></h5>
                             <h6>56,600</h6>
                         </a>
                     </li>
@@ -175,7 +175,7 @@
                         <a href="show.html">
                             <img src="images/g08.jpg" alt="제품8">
                             <span class="ir">제품착용8</span>
-                            <h5>HOBBES silver</h5>
+                            <h5><span>HOBBES silver</span></h5>
                             <h6>66,000</h6>
                         </a>
                     </li>
@@ -185,10 +185,10 @@
         </div>
         <!-- 오프라인 매장 -->
         <div id="shop_wrap">
-            <div class="title_wrap itpos">
+            <div class="title_wrap">
                 <h2 class="cont_tit">shop</h2>
                 <p class="cont_sub_tit">Itaewon Flagship Store
-                    21, ITAEWON-ro 16-gil, Yongsan-gu,
+                    21, ITAEWON-ro 16-gil,<span class="br"></span> Yongsan-gu,
                     Seoul, Republic of Korea</p>
             </div>
             <a href="#" class="shop_btn">CONTACT</a>
