--- a/show.html
+++ b/show.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="ko">
 
 <head>
@@ -15,12 +15,11 @@
 </head>
 
 <body>
-    <!--    <div id="wrap">-->
     <!--헤더-->
     <div id="header" class="on">
         <header class="wrap">
             <h1 class="logo">
-                <a href="/">
+                <a href="index.html">
                     <img src="images/logo_white.png" alt="로고">
                     <img src="images/logo_black.png" alt="로고">
                 </a>
@@ -200,7 +199,6 @@
             </ul>
         </nav>
     </div>
-    <!--    </div>-->
 </body>
 
 </html>
