--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
         <div id="header" class="on">
             <header class="wrap">
                 <h1 class="logo">
-                    <a href="index.html">
+                    <a href="#">
                         <img src="images/logo_white.png" alt="로고">
                         <img src="images/logo_black.png" alt="로고">
                     </a>
@@ -79,17 +79,17 @@
             <nav class="menu">
                 <ul class="nav_list">
                     <li>
-                        <a href="gallery.html">
+                        <a href="#">
                             GALLERY
                         </a>
                     </li>
                     <li>
-                        <a href="list.html">
+                        <a href="#">
                             SUNGLASSES
                         </a>
                     </li>
                     <li>
-                        <a href="list.html">
+                        <a href="#">
                             GLASSES
                         </a>
                     </li>
