--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
         <div id="header" class="on">
             <header class="wrap">
                 <h1 class="logo">
-                    <a href="index.html">
+                    <a href="#">
                         <img src="images/logo_white.png" alt="로고">
                         <img src="images/logo_black.png" alt="로고">
                     </a>
@@ -67,7 +67,7 @@
             <!--리스트 사진-->
             <ul class="gls_list">
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g01.jpg" alt="제품1">
                         <span class="ir">제품착용1</span>
                         <h5>HENDRIX mandarincrystal</h5>
@@ -75,7 +75,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html">
+                    <a href="#">
                         <img src="images/g09.jpg" alt="제품9">
                         <span class="ir">제품착용9</span>
                         <h5>LENNOX tortoise</h5>
@@ -83,7 +83,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g02.jpg" alt="제품2">
                         <span class="ir">제품착용2</span>
                         <h5>ARNOLD crystal</h5>
@@ -91,7 +91,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html">
+                    <a href="#">
                         <img src="images/g10.jpg" alt="제품10">
                         <span class="ir">제품착용10</span>
                         <h5>ARNOLD black</h5>
@@ -99,7 +99,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g03.jpg" alt="제품3">
                         <span class="ir">제품착용3</span>
                         <h5>STEVEN antiquegold</h5>
@@ -107,7 +107,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g04.jpg" alt="제품4">
                         <span class="ir">제품착용4</span>
                         <h5>BUSH silver-sage</h5>
@@ -115,7 +115,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g05.jpg" alt="제품5">
                         <span class="ir">제품착용5</span>
                         <h5>LIAM silver-line</h5>
@@ -123,7 +123,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g06.jpg" alt="제품6">
                         <span class="ir">제품착용6</span>
                         <h5>STYLES brown</h5>
@@ -131,7 +131,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html">
+                    <a href="#">
                         <img src="images/g11.jpg" alt="제품11">
                         <span class="ir">제품착용11</span>
                         <h5>PASI black</h5>
@@ -139,7 +139,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g07.jpg" alt="제품7">
                         <span class="ir">제품착용7</span>
                         <h5>LACY black</h5>
@@ -147,7 +147,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html">
+                    <a href="#">
                         <img src="images/g12.jpg" alt="제품12">
                         <span class="ir">제품착용12</span>
                         <h5>ADIN silver-forest</h5>
@@ -155,7 +155,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="show.html" class="htxt">
+                    <a href="#" class="htxt">
                         <img src="images/g08.jpg" alt="제품8">
                         <span class="ir">제품착용8</span>
                         <h5>HOBBES silver</h5>
@@ -206,17 +206,17 @@
             <nav class="menu">
                 <ul class="nav_list">
                     <li>
-                        <a href="gallery.html">
+                        <a href="#">
                             GALLERY
                         </a>
                     </li>
                     <li>
-                        <a href="list.html">
+                        <a href="#">
                             SUNGLASSES
                         </a>
                     </li>
                     <li>
-                        <a href="list.html">
+                        <a href="#">
                             GLASSES
                         </a>
                     </li>
